<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShapeGameAndroidClient</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="server_name">Server Name</string>
    <string name="server_port">Server Port</string>
    <string name="connect_server">Connect To Server</string>
    <string name="disconnect_server">Disconnect From Server</string>
    <string name="button_left">&#60;</string>
    <string name="button_up">^</string>
    <string name="button_right">&#62;</string>
    <string name="button_down">v</string>
    

</resources>
