<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameControllerActivity"
    android:background="#FFFFFF" >
    
    <Button
        android:id="@+id/leftDirection"
        android:onClick="leftDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_left"
        android:textColor="#FFFFFF"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/upDirection"
        android:onClick="upDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/leftDirection"
        android:text="@string/button_up"
        android:textColor="#FFFFFF"
        android:layout_toRightOf="@id/leftDirection" />
    
    <Button
        android:id="@+id/rightDirection"
        android:onClick="rightDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/upDirection"
        android:text="@string/button_right"
        android:textColor="#FFFFFF"
        android:layout_toRightOf="@id/upDirection" />
    
    <Button
        android:id="@+id/downDirection"
        android:onClick="downDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/leftDirection"
        android:text="@string/button_down"
        android:textColor="#FFFFFF"
        android:layout_toRightOf="@id/leftDirection" />
    
    <android.gesture.GestureOverlayView 
		android:id="@+id/spellDetectorView"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_toRightOf="@+id/rightDirection"
    	android:layout_marginLeft="10dp"
    	android:background="@drawable/border"
    	android:gestureColor="#000000" />
    
    
</RelativeLayout>
